# vision-transformer

./: .dockerignore  .flake8  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  test.ipynb
data/: __init__.py  data.py  dataset.py
engine/: engine.py
model/: multihead_self_attention_block.py  patch_embedding.py  transformer_encoder_block.py  utils.py  vit.py
scripts/: create_validation_set.py  main.py
src/: setup.py
src/data/: data.py  dataset.py
src/data/types/: __init__.py
src/engine/: engine.py
src/model/: mlp.py  patch_embedding.py  transformer_encoder_block.py  vit.py
