[tool.poetry]
name = "vision transformer"
version = "0.1.0"
description = "Implementation of a vision transformer"
authors = ["Lawrence Borst"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
torch = "^2.6.0"
torchvision = "^0.21.0"
click = "^8.1.8"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
